# chulocoin

./: .dockerignore  .editorconfig  .env.example  .env.production.example  .env.staging.example  .eslintrc.js  .gitignore  .prettierignore  CONTRACT_STRUCTURE_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DOCKER_DEPLOYMENT.md  DOCKER_PUSH_GUIDE.md  DOCKER_SETUP.md  LANDING_PAGES_SUMMARY.md  QUICK_REFERENCE.md  README.md  STAGING_DEPLOYMENT.md  STAGING_FILES_SUMMARY.md  TROUBLESHOOTING.md  WEEK1_COMPLETE.md  docker-build-push.sh  docker-compose.deploy.yml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json  turbo.json  vercel.json
.github/: SECRETS.md
backend/: .env.example  DEPLOYMENT.md  Dockerfile  README.md  jest.config.js  package.json  railway.toml  tsconfig.json
bot-executor/: Dockerfile  README.md  package.json  tsconfig.json
cli/: .gitignore  ARCHITECTURE.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Makefile  QUICKSTART.md  README.md  START_HERE.md  STATUS.md  STRUCTURE.txt  SUMMARY.md  VERIFY.md  build.bat  build.sh  config.example.toml  package.json
cli/src/: config.rs  lib.rs  main.rs
cli/src/blockchain/: mod.rs
cli/src/mining/: config.rs  engine.rs  market_data.rs  mod.rs  strategy.rs
cli/src/ui/: mod.rs
contracts/: .env.example  .gitignore  .gitmodules.template  .solhint.json  CHAINLINK_FEEDS.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_QUICK_START.md  FOUNDRY.md  FOUNDRY_GUIDE.md  FOUNDRY_SETUP_COMPLETE.md  HYBRID_WORKFLOW.md  Makefile  QUICK_START.md  README.md  (+9 more)
(+147 files in other folders)
