[package]
name = "chulobots-cli"
version = "0.1.0"
edition = "2021"
authors = ["ChuloBots Team"]
description = "ChuloBots CLI mining tool for signal validation"
license = "Proprietary"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Terminal UI
ratatui = "0.26"
crossterm = "0.27"

# Blockchain interaction
ethers = "2.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebSocket
tokio-tungstenite = "0.21"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Cross-platform directories
dirs = "5.0"

[lib]
name = "chulobots_cli"
path = "src/lib.rs"

[[bin]]
name = "chulobots"
path = "src/main.rs"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
